--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,17 @@
 #BDD
-
-spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
-spring.datasource.url = jdbc:mariadb://localhost:3306/myresto?serverTimezone=UTC
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/myresto?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 
 #JPA
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql= true
 
-
+spring.main.allow-circular-references=true
 #SERVER
 server.servlet.context-path=/myresto
 spring.mvc.servlet.path=/api
