--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.main.allow-circular-references=true
 server.servlet.context-path=/myresto
 spring.mvc.servlet.path=/api
 server.port=5000
+
+#FILES
+upload.path=images
