--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #BDD
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/myresto?serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 #JPA
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -15,7 +15,7 @@ spring.main.allow-circular-references=true
 #SERVER
 server.servlet.context-path=/myresto
 spring.mvc.servlet.path=/api
-server.port=5000
+server.port=${APP_PORT}
 
 #FILES
 upload.path=images
