--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -22,10 +22,10 @@
         dest: /home/ubuntu/MyResto
 
     - name: "set image docker"
-      command: "pws && ls && docker build -t myresto /home/ubuntu/MyResto/Dockerfile"
+      command: "docker build -t myresto ./Docker/"
 
     - name: "docker-compose up database"
-      command: "docker-compose -f /home/ubuntu/MyResto/docker-compose.yml up -d docker-mysql"
+      command: "docker-compose -f /home/ubuntu/MyResto/Docker/docker-compose.yml up -d docker-mysql"
 
     - name: "docker-compose up for phpmyadmin and springboot app"
-      command: "docker-compose -f /home/ubuntu/MyResto/docker-compose.yml up -d"
+      command: "docker-compose -f /home/ubuntu/MyResto/Docker/docker-compose.yml up -d"
