--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -20,12 +20,15 @@
         repo: 'https://github.com/MaximeDzN/myResto-spring.git'
         version: 'DevOps'
         dest: /home/ubuntu/MyResto
+    - name: "ls"
+      command: "ls"
+    
 
-    - name: "set image docker"
-      command: "docker build -t myresto ./Docker/"
+    # - name: "set image docker"
+    #   command: "docker build -t myresto ./Docker/"
 
-    - name: "docker-compose up database"
-      command: "docker-compose -f /home/ubuntu/MyResto/Docker/docker-compose.yml up -d docker-mysql"
+    # - name: "docker-compose up database"
+    #   command: "docker-compose -f /home/ubuntu/MyResto/Docker/docker-compose.yml up -d docker-mysql"
 
-    - name: "docker-compose up for phpmyadmin and springboot app"
-      command: "docker-compose -f /home/ubuntu/MyResto/Docker/docker-compose.yml up -d"
+    # - name: "docker-compose up for phpmyadmin and springboot app"
+    #   command: "docker-compose -f /home/ubuntu/MyResto/Docker/docker-compose.yml up -d"
