--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -20,8 +20,10 @@
         repo: 'https://github.com/MaximeDzN/myResto-spring.git'
         version: 'DevOps'
         dest: '/home/ubuntu/myResto-spring'
+    - name: "create volume"
+      command: "sudo mkdir /ebsMyResto"
     - name: "mount volume"
-      command: "sudo mkdir /ebsMyResto && sudo mount /dev/xvdf /ebsMyResto/"
+      command: "sudo mount /dev/xvdf /ebsMyResto/"
     - name: "Build an image for MyResto"
       docker_image:
         build:
