--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -36,4 +36,4 @@
       command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
 
     - name: "docker-compose up for phpmyadmin and springboot app"
-      command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d"
+      command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin"
