--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -24,14 +24,14 @@
       command: "sudo mkdir /ebsMyResto"
     - name: "mount volume"
       command: "sudo mount /dev/xvdf /ebsMyResto/"
-    # - name: "Build an image for MyResto"
-    #   docker_image:
-    #     build:
-    #       path: /home/ubuntu/myResto-sspring/Docker
-    #     name: myresto
-    #     tag: latest
-    #     push: no
-    #     source: build
+    - name: "Build an image for MyResto"
+      docker_image:
+        build:
+          path: /home/ubuntu/myResto-sspring/Docker
+        name: myresto
+        tag: latest
+        push: no
+        source: build
     - name: "docker-compose up database"
       command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
 
