--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -2,18 +2,77 @@
 - hosts: all
   become: true
   pre_tasks:
-    - name: install dependencies
-      apt:
-        name: "git"
-        state: "present"
-    - name: install dependencies
-      apt:
-        name: "docker"
-        state: "present"
-    - name: install dependencies
-      apt:
-        name: "docker-compose"
-        state: "present"
+    # - name: install dependencies
+    #   apt:
+    #     name: "git"
+    #     state: "present"
+    # - name: install dependencies
+    #   apt:
+    #     name: "docker"
+    #     state: "present"
+    # - name: install dependencies
+    #   apt:
+    #     name: "docker-compose"
+    #     state: "present"
+    - name: Update all packages
+      yum:
+        name: '*'
+        state: latest
+        update_only: yes
+
+    - name: Ensure a list of yum packages are installed
+      yum:
+        name: "{{ packages }}"
+        state: latest
+        update_cache: yes
+      vars:
+        packages:
+        - python-pip
+        - yum-utils
+        - device-mapper-persistent-data
+        - lvm2
+        - amazon-linux-extras
+
+    - name: Add extras repository
+      shell: yum-config-manager --enable extras
+
+    - name: Enable Some packages from amazon-linux-extras packages
+      shell: "amazon-linux-extras enable python3.8 ansible2 docker"
+
+    - name: clean yum metadata cache
+      command: yum clean metadata
+      args:
+        warn: false
+
+    - name: Ensure a list of yum packages are installed
+      yum:
+        name: "{{ packages }}"
+        state: latest
+        update_cache: yes
+      vars:
+        packages:
+        - python3.8
+        - ansible
+        - docker
+
+    - name: Enable Docker CE service at startup
+      service:
+        name: docker
+        state: started
+        enabled: yes
+
+    - name: Upgrade pip3
+      shell: "python3.8 -m pip install pip --upgrade"
+
+    - name: Ensure Python pip packages are installed
+      pip:
+        name: "{{ packages }}"
+        executable: /usr/local/bin/pip3.8
+      vars:
+        packages:
+        - boto
+        - boto3
+        - docker-compose
   tasks:
     - name: "Download data from git repo"
       git:
@@ -36,4 +95,4 @@
       command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
 
     - name: "docker-compose up for phpmyadmin and springboot app"
-      command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d"
+      command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin"
