--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -73,26 +73,29 @@
         - boto
         - boto3
         - docker-compose
+    - name: "Add access for docker"
+      shell: "sudo gpasswd -a $USER docker && newgrp docker"
   tasks:
     - name: "Download data from git repo"
       git:
         repo: 'https://github.com/MaximeDzN/myResto-spring.git'
         version: 'DevOps'
-        dest: '/home/ubuntu/myResto-spring'
+        dest: '/home/ec2-user/myResto-spring'
     - name: "create volume"
       command: "sudo mkdir /ebsMyResto"
     - name: "mount volume"
       command: "sudo mount /dev/xvdf /ebsMyResto/"
     - name: "Build an image for MyResto"
+      become: true
       docker_image:
         build:
-          path: /home/ubuntu/myResto-spring/Docker
+          path: /home/ec2-user/myResto-spring/Docker
         name: myresto
         tag: latest
         push: no
         source: build
     - name: "docker-compose up database"
-      command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
+      command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
 
     - name: "docker-compose up for phpmyadmin and springboot app"
-      command: "docker-compose -f /home/ubuntu/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin"
+      command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin"
