--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -86,7 +86,7 @@
     - name: "mount volume"
       command: "sudo mount /dev/xvdf /ebsMyResto/"
     - name: "Build an image for MyResto"
-      command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto"
+      command: "sudo docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
       # become: true
       # docker_image:
       #   build:
