--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -73,8 +73,6 @@
         - boto
         - boto3
         - docker-compose
-    - name: "Add access for docker"
-      shell: "sudo gpasswd -a $USER docker && newgrp docker"
   tasks:
     - name: "Download data from git repo"
       git:
@@ -85,16 +83,13 @@
       command: "sudo mkdir /ebsMyResto"
     - name: "mount volume"
       command: "sudo mount /dev/xvdf /ebsMyResto/"
+
+    - name: "Add access for docker"
+      command: "sudo gpasswd -a $USER docker && newgrp docker"
+
     - name: "Build an image for MyResto"
       command: "sudo docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
-      # become: true
-      # docker_image:
-      #   build:
-      #     path: /home/ec2-user/myResto-spring/Docker
-      #   name: myresto
-      #   tag: latest
-      #   push: no
-        # source: build
+
     - name: "docker-compose up database"
       command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
 
