--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -81,17 +81,24 @@
         repo: 'https://github.com/MaximeDzN/myResto-spring.git'
         version: 'DevOps'
         dest: '/home/ec2-user/myResto-spring'
+        
     - name: "create volume"
       command: "sudo mkdir /ebsMyResto"
+      
     - name: "mount volume"
       command: "sudo mount /dev/xvdf /ebsMyResto/"
+
     - name: "Build an image for MyResto"
       command: "sudo docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+      
     - name: "test droit"
       command: "sudo gpasswd -a $USER docker"
+
     - name: "adding group"
       command: "newgrp docker"
-    - name: "docker-compose up database"
-      command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
-    - name: "docker-compose up for phpmyadmin and springboot app"
-      command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin"
+
+    # - name: "docker-compose up database"
+    #   command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
+
+    # - name: "docker-compose up for phpmyadmin and springboot app"
+    #   command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin"
