--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -96,6 +96,12 @@
 
     - name: "adding group"
       command: "newgrp docker"
+    
+    - name: deploy Docker Compose stack
+      docker_compose:
+        project_src: /home/ec2-user/myResto-spring/Docker/
+        files:
+        - docker-compose.yaml
 
     # - name: "docker-compose up database"
     #   command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
