--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -2,79 +2,79 @@
 - hosts: all
   become: true
   pre_tasks:
-    # - name: install dependencies
-    #   apt:
-    #     name: "git"
-    #     state: "present"
-    # - name: install dependencies
-    #   apt:
-    #     name: "docker"
-    #     state: "present"
-    # - name: install dependencies
-    #   apt:
-    #     name: "docker-compose"
-    #     state: "present"
-    - name: Update all packages
+    - name: install dependencies
       yum:
-        name: '*'
-        state: latest
-        update_only: yes
-
-    - name: Ensure a list of yum packages are installed
+        name: "git"
+        state: "present"
+    - name: install dependencies
       yum:
-        name: "{{ packages }}"
-        state: latest
-        update_cache: yes
-      vars:
-        packages:
-        - python-pip
-        - yum-utils
-        - device-mapper-persistent-data
-        - lvm2
-        - amazon-linux-extras
-
-    - name: Add extras repository
-      shell: yum-config-manager --enable extras
-
-    - name: Enable Some packages from amazon-linux-extras packages
-      shell: "amazon-linux-extras enable python3.8 ansible2 docker"
-
-    - name: clean yum metadata cache
-      command: yum clean metadata
-      args:
-        warn: false
-
-    - name: Ensure a list of yum packages are installed
+        name: "docker"
+        state: "present"
+    - name: install dependencies
       yum:
-        name: "{{ packages }}"
-        state: latest
-        update_cache: yes
-      vars:
-        packages:
-        - python3.8
-        - ansible
-        - docker
+        name: "docker-compose"
+        state: "present"
+    # - name: Update all packages
+    #   yum:
+    #     name: '*'
+    #     state: latest
+    #     update_only: yes
 
-    - name: Enable Docker CE service at startup
-      service:
-        name: docker
-        state: started
-        enabled: yes
+    # - name: Ensure a list of yum packages are installed
+    #   yum:
+    #     name: "{{ packages }}"
+    #     state: latest
+    #     update_cache: yes
+    #   vars:
+    #     packages:
+    #     - python-pip
+    #     - yum-utils
+    #     - device-mapper-persistent-data
+    #     - lvm2
+    #     - amazon-linux-extras
 
-    - name: Upgrade pip3
-      shell: "python3.8 -m pip install pip --upgrade"
+    # - name: Add extras repository
+    #   shell: yum-config-manager --enable extras
 
-    - name: Ensure Python pip packages are installed
-      pip:
-        name: "{{ packages }}"
-        executable: /usr/local/bin/pip3.8
-      vars:
-        packages:
-        - boto
-        - boto3
-        - docker-compose
-    - name: "Add access for docker"
-      shell: "sudo gpasswd -a $USER docker && newgrp docker"
+    # - name: Enable Some packages from amazon-linux-extras packages
+    #   shell: "amazon-linux-extras enable python3.8 ansible2 docker"
+
+    # - name: clean yum metadata cache
+    #   command: yum clean metadata
+    #   args:
+    #     warn: false
+
+    # - name: Ensure a list of yum packages are installed
+    #   yum:
+    #     name: "{{ packages }}"
+    #     state: latest
+    #     update_cache: yes
+    #   vars:
+    #     packages:
+    #     - python3.8
+    #     - ansible
+    #     - docker
+
+    # - name: Enable Docker CE service at startup
+    #   service:
+    #     name: docker
+    #     state: started
+    #     enabled: yes
+
+    # - name: Upgrade pip3
+    #   shell: "python3.8 -m pip install pip --upgrade"
+
+    # - name: Ensure Python pip packages are installed
+    #   pip:
+    #     name: "{{ packages }}"
+    #     executable: /usr/local/bin/pip3.8
+    #   vars:
+    #     packages:
+    #     - boto
+    #     - boto3
+    #     - docker-compose
+    # - name: "Add access for docker"
+    #   shell: "sudo gpasswd -a $USER docker && newgrp docker"
   tasks:
     - name: "Download data from git repo"
       git:
@@ -82,26 +82,26 @@
         version: 'DevOps'
         dest: '/home/ec2-user/myResto-spring'
         
-    - name: "create volume"
-      command: "sudo mkdir /ebsMyResto"
+    # - name: "create volume"
+    #   command: "sudo mkdir /ebsMyResto"
       
-    - name: "mount volume"
-      command: "sudo mount /dev/xvdf /ebsMyResto/"
+    # - name: "mount volume"
+    #   command: "sudo mount /dev/xvdf /ebsMyResto/"
 
-    - name: "Build an image for MyResto"
-      command: "sudo docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+    # - name: "Build an image for MyResto"
+    #   command: "sudo docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
       
-    - name: "test droit"
-      command: "sudo gpasswd -a $USER docker"
+    # - name: "test droit"
+    #   command: "sudo gpasswd -a $USER docker"
 
-    - name: "adding group"
-      command: "newgrp docker"
+    # - name: "adding group"
+    #   command: "newgrp docker"
     
-    - name: deploy Docker Compose stack
-      docker_compose:
-        project_src: /home/ec2-user/myResto-spring/Docker/
-        files:
-        - docker-compose.yaml
+    # - name: deploy Docker Compose stack
+    #   docker_compose:
+    #     project_src: /home/ec2-user/myResto-spring/Docker/
+    #     files:
+    #     - docker-compose.yaml
 
     # - name: "docker-compose up database"
     #   command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
