--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -2,16 +2,20 @@
 - hosts: all
   become: true
   pre_tasks:
-    - name: install dependencies
+    - name: install dependencies docker 
       command: "sudo amazon-linux-extras install -y  docker"
-    - name: install dependencies
+    - name: install dependencies docker
       command: "sudo yum install -y docker"
-    - name: install dependencies
+    - name: start docker
       command: "sudo service docker start"
-    - name: install dependencies
+    - name: enable docker
       command: "sudo systemctl enable docker"
-    - name: install dependencies
+    - name: ajout droit docker a ec2
       command: "sudo usermod -a -G docker ec2-user"
+    - name: install docker-compose
+      command: 'sudo curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose'
+    - name: ajout droit docker-compose
+      command: "sudo chmod +x /usr/local/bin/docker-compose" 
     # - name: install dependencies
     #   yum:
     #     name: "docker"
