--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -13,7 +13,7 @@
     - name: ajout droit docker a ec2
       command: "sudo usermod -a -G docker ec2-user"
     - name: install docker-compose
-      command: 'sudo curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose'
+      shell: 'sudo curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose'
     - name: ajout droit docker-compose
       command: "sudo chmod +x /usr/local/bin/docker-compose" 
     # - name: install dependencies
