--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -34,10 +34,8 @@
       command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
       
     - name: "docker-compose up database"
-      shell: "ls"
+      shell: "docker-compose up docker-compose.yaml -d"
 
-    - name: "docker-compose up database"
-      shell: "pwd"
 
     # - name: "docker-compose up for phpmyadmin and springboot app"
     #   shell: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d phpmyadmin"
