--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,11 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql= true
-
 spring.main.allow-circular-references=true
 #SERVER
 server.servlet.context-path=/myresto
 server.port=5000
+server.error.whitelabel.enabled=false
 
 #FILES
 upload.path=images
