--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -30,14 +30,19 @@
         version: 'DevOps'
         dest: '/home/ec2-user/myResto-spring'
 
+
+    - name: Go to the folder and execute commande
+      command: chdir=/home/ec2-user/myResto-spring/Docker ls >> txt.txt
+      
     - name: Go to the folder and execute command
-      command: chdir=/home/ec2-user/myResto-spring/Docker ls
+      command: chdir=/home/ec2-user/myResto-spring/Docker docker-compose up -d docker-mysql
+
 
     # - name: "Build an image for MyResto"
     #   command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
       
-    - name: "docker-compose up database"
-      command: "docker-compose up -d docker-mysql"
+    # - name: "docker-compose up database"
+    #   command: "docker-compose up -d docker-mysql"
 
 
     # - name: "docker-compose up for phpmyadmin and springboot app"
