--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -1,47 +1,95 @@
 ---
 - hosts: all
   become: true
-  # pre_tasks:
-  #   - name: install dependencies docker 
-  #     command: "sudo amazon-linux-extras install -y  docker"
+  pre_tasks:
+    - name: Update all packages
+      yum:
+        name: '*'
+        state: latest
+        update_only: yes
 
-  #   - name: install dependencies docker
-  #     command: "sudo yum install -y docker"
+    - name: Ensure a list of yum packages are installed
+      yum:
+        name: "{{ packages }}"
+        state: latest
+        update_cache: yes
+      vars:
+        packages:
+        - python-pip
+        - yum-utils
+        - device-mapper-persistent-data
+        - lvm2
+        - amazon-linux-extras
 
-  #   - name: start docker
-  #     command: "sudo service docker start"
+    - name: Add extras repository
+      shell: yum-config-manager --enable extras
 
-  #   - name: enable docker
-  #     command: "sudo systemctl enable docker"
+    - name: Enable Some packages from amazon-linux-extras packages
+      shell: "amazon-linux-extras enable python3.8 ansible2 docker"
 
-  #   - name: ajout droit docker a ec2
-  #     command: "sudo usermod -a -G docker ec2-user"
+    - name: clean yum metadata cache
+      command: yum clean metadata
+      args:
+        warn: false
 
-  #   - name: install docker-compose
-  #     shell: 'sudo curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose'
+    - name: Ensure a list of yum packages are installed
+      yum:
+        name: "{{ packages }}"
+        state: latest
+        update_cache: yes
+      vars:
+        packages:
+        - python3.8
+        - ansible
+        - docker
 
-  #   - name: ajout droit docker-compose
-  #     command: "sudo chmod +x /usr/local/bin/docker-compose" 
+    - name: Enable Docker CE service at startup
+      service:
+        name: docker
+        state: started
+        enabled: yes
 
+    - name: give the privilège to ec2-user
+      user:
+        name: ec2-user
+        append: yes
+        groups:
+          - docker
+
+    - name: Upgrade pip3
+      shell: "python3.8 -m pip install pip --upgrade"
+
+    - name: Ensure Python pip packages are installed
+      pip:
+        name: "{{ packages }}"
+        executable: /usr/local/bin/pip3.8
+      vars:
+        packages:
+        - boto
+        - boto3
+        - docker-compose
   tasks:
     - name: "Download data from git repo"
       git:
         repo: 'https://github.com/MaximeDzN/myResto-spring.git'
         version: 'DevOps'
         dest: '/home/ec2-user/myResto-spring'
-    - name: "add pour run le script"
-      command: sudo chmod +x /home/ec2-user/myResto-spring/Docker/shell.sh
+
+    - name: "Build an image for MyResto"
+      command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+
+    # - name: "add pour run le script"
+    #   command: sudo chmod +x /home/ec2-user/myResto-spring/Docker/shell.sh
 
 
-    - name: Run sh
-      command: chdir=/home/ec2-user/myResto-spring/Docker ./shell.sh
+    # - name: Run sh
+    #   command: chdir=/home/ec2-user/myResto-spring/Docker ./shell.sh
 
     # - name: Go to the folder and execute command
     #   command: chdir=/home/ec2-user/myResto-spring/Docker docker-compose up -d docker-mysql
 
 
-    # - name: "Build an image for MyResto"
-    #   command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+
 
     
       
