--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -77,6 +77,10 @@
 
     - name: "Build an image for MyResto"
       command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+    
+    - name: "Docker-compose tesyt"
+      command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
+
 
     # - name: "add pour run le script"
     #   command: sudo chmod +x /home/ec2-user/myResto-spring/Docker/shell.sh
