--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -79,7 +79,8 @@
       command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
     
     - name: "Docker-compose tesyt"
-      command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql"
+      docker_compose:
+        project_src: '/home/ec2-user/myResto-spring/Docker/'
 
 
     # - name: "add pour run le script"
