--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -76,12 +76,17 @@
         version: 'DevOps'
         dest: '/home/ec2-user/myResto-spring'
 
-    - name: "Build an image for MyResto"
-      command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+    # - name: "Build an image for MyResto"
+    #   command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+
+    - name: "test"
+      command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d "
+
+
     
-    - name: "Docker-compose tesyt"
-      docker_compose:
-        project_src: '/home/ec2-user/myResto-spring/Docker/'
+    # - name: "Docker-compose tesyt"
+    #   docker_compose:
+    #     project_src: '/home/ec2-user/myResto-spring/Docker/'
 
 
     # - name: "add pour run le script"
