--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -80,7 +80,7 @@
     #   command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
 
     - name: "test"
-      command: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d "
+      shell: "docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d "
 
 
     
