--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -68,6 +68,7 @@
         - boto
         - boto3
         - docker
+        - docker-py
         - docker-compose
   tasks:
     - name: "Download data from git repo"
