--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -76,13 +76,18 @@
 
     - name: "create volume"
       command: "sudo mkdir /ebsMyResto"
-      
+
     - name: "mount volume"
       command: "sudo mount /dev/xvdf /ebsMyResto/"
 
     - name: "Build an image for MyResto"
       command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
 
-    
-    - name: "Docker-compose tesyt"
-      shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
+    - name: "Docker-compose up database"
+      command: docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql
+
+    - name: "Docker-compose up phpmyadmin and springboot app"
+      command: docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
+
+    # - name: "Docker-compose tesyt"
+    #   shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
