--- a/Docker/docker-compose.yaml
+++ b/Docker/docker-compose.yaml
@@ -29,6 +29,8 @@ services:
     image: myresto:latest
     ports:
       - "8080:8080"
+    volumes:
+      - /ebsMyResto/images:/images
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://docker-mysql/myresto?useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: springUser
