--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -81,14 +81,14 @@
       command: "sudo mount /dev/xvdf /ebsMyResto/"
 
     - name: "copy image "
-      command: "sudo cp -r /ebsMyResto/images /home/ec2-user/myResto-spring/Docker/images"
+      command: "cp -r /ebsMyResto/images /home/ec2-user/myResto-spring/Docker/images"
 
-    - name: "Build an image for MyResto"
-      command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
+    # - name: "Build an image for MyResto"
+    #   command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
 
-    - name: "Docker-compose up database"
-      shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql
+    # - name: "Docker-compose up database"
+    #   shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d docker-mysql
 
-    - name: "Docker-compose up phpmyadmin and springboot app"
-      shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
+    # - name: "Docker-compose up phpmyadmin and springboot app"
+    #   shell: /usr/local/bin/docker-compose -f /home/ec2-user/myResto-spring/Docker/docker-compose.yaml up -d
       
