--- a/ansible/myresto.yml
+++ b/ansible/myresto.yml
@@ -81,10 +81,10 @@
       command: "sudo mount /dev/xvdf /ebsMyResto/"
 
     - name: "copy image "
-      command: "cp -r /ebsMyResto/images /home/ec2-user/myResto-spring/Docker/images"
+      command: "cp -r /ebsMyResto/images /home/ec2-user/images"
 
     - name: "change owner images "
-      command: "sudo chown ec2-user:ec2-user /home/ec2-user/myResto-spring/Docker/images"
+      command: "sudo chown ec2-user:ec2-user /home/ec2-user/images"
 
     - name: "Build an image for MyResto"
       command: "docker build -f /home/ec2-user/myResto-spring/Docker/Dockerfile -t myresto ."
