--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -21,10 +21,10 @@ RUN mvn clean package
 RUN cp target/*.jar app.jar
 
 
-RUN useradd spring
+# RUN useradd spring
 
-RUN usermod -a -G spring  spring
+# RUN usermod -a -G spring  spring
 
-USER spring:spring
+# USER spring:spring
 
 ENTRYPOINT ["java","-jar","app.jar"]
